--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>ResumeBootstrap</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/all.min.css">
+  <base href='/'>
 </head>
 <body>
   <app-root></app-root>
